--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./index.css" />
     <title>Frontend Mentor | Order summary card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <img src="./images/illustration-hero.svg" alt="hero" />
+      <div class="information">
+        <h1>Order Summary</h1>
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
